--- a/blog.html
+++ b/blog.html
@@ -86,7 +86,7 @@
 
                 <div class="flex flex2 gap2 column align-start">
                     <div class="floating-header option flex column gap1">
-                        <h2>Sort</h2>
+                        <label for="sort-dropdown"><h2>Sort</h2></label>
                         <select id="sort-dropdown">
                             <option value="date:desc">Newest</option>
                             <option value="date:asc">Oldest</option>
