--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <a href="#main" class="skip-to-main-content-link">Skip to main content</a>
     <header class="page-width">
         <div class="flex align-center justify-between floating-header">
 
