--- a/blog.html
+++ b/blog.html
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+    <a href="#main" class="skip-to-main-content-link">Skip to main content</a>
+
     <header class="page-width">
         <div class="flex align-center justify-between floating-header">
 
@@ -79,7 +81,7 @@
             </div>
         </div>
     </header>
-    <main>
+    <main id="main">
         <h1 class="visually-hidden">Blog posts</h1>
         <section class="page-width">
             <div class="flex gap2 margtopbot mob-col">
