--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+    <a href="#main" class="skip-to-main-content-link">Skip to main content</a>
+
     <header class="page-width">
         <div class="flex align-center justify-between floating-header">
 
@@ -79,7 +81,7 @@
             </div>
         </div>
     </header>
-    <main>
+    <main id="main">
         <section class="page-width flex about align-center gap2 margtopbot mob-col">
             <div class="flex flex1 gap2 column">
                 <h1>Get in contact with me</h1>
