--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+    <a href="#main" class="skip-to-main-content-link">Skip to main content</a>
+
     <header class="page-width">
         <div class="flex align-center justify-between floating-header">
 
@@ -79,7 +81,7 @@
             </div>
         </div>
     </header>
-    <main>
+    <main  id="main">
         <h1 class="visually-hidden">mpBlog</h1>
         <section class="page-width flex align-center hero gap1 mob-col">
             <div class="flex4 flex gap2 column">
