--- a/post.html
+++ b/post.html
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+    <a href="#main" class="skip-to-main-content-link">Skip to main content</a>
+
     <header class="page-width">
         <div class="flex align-center justify-between floating-header">
 
