--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <header class="page-width">
         <div class="flex align-center justify-between floating-header">
 
-            <a class="flex align-center logo" title="To the Home Page" href="index.html"><svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+            <a class="flex align-center logo" title="To the Home Page" href="index.html"><svg xmlns="http://www.w3.org/2000/svg"
                     width="248.000000pt" height="71.000000pt" viewBox="0 0 248.000000 71.000000"
                     preserveAspectRatio="xMidYMid meet">
 
@@ -79,7 +79,7 @@
             </div>
         </div>
     </header>
-    <main>
+    <main id="main">
         <section class="page-width flex about align-center gap2 margtopbot mob-col">
             <div class="flex gap2 column">
                 <h1>Hi, I'm Marcus</h1>
