--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <script type="module" src="js/fetchfeatured.js" defer></script>
+    <script type="module" src="js/fetchfeatured.js"></script>
     <script src="js/darkmode.js" defer></script>
-    <script type="module" src="js/carousel.js" defer></script>
+    <script type="module" src="js/carousel.js"></script>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     <header class="page-width">
         <div class="flex align-center justify-between floating-header">
 
-            <a class="flex align-center logo" title="To the Home Page" href="index.html"><svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+            <a class="flex align-center logo" title="To the Home Page" href="index.html"><svg xmlns="http://www.w3.org/2000/svg"
                     width="248.000000pt" height="71.000000pt" viewBox="0 0 248.000000 71.000000"
                     preserveAspectRatio="xMidYMid meet">
 
