--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,9 @@
     <header class="page-width">
         <div class="flex align-center justify-between floating-header">
 
-            <a class="flex align-center logo" title="To the Home Page" href="index.html"><svg xmlns="http://www.w3.org/2000/svg"
-                    width="248.000000pt" height="71.000000pt" viewBox="0 0 248.000000 71.000000"
-                    preserveAspectRatio="xMidYMid meet">
+            <a class="flex align-center logo" title="To the Home Page" href="index.html"><svg
+                    xmlns="http://www.w3.org/2000/svg" width="248.000000pt" height="71.000000pt"
+                    viewBox="0 0 248.000000 71.000000" preserveAspectRatio="xMidYMid meet">
 
                     <g transform="translate(0.000000,71.000000) scale(0.100000,-0.100000)" fill="#000000" stroke="none">
                         <path d="M1067 693 c-15 -15 -5 -32 21 -35 l27 -3 5 -235 5 -235 50 -13 c106
@@ -91,7 +91,6 @@
                 <div class="form-control flex column">
                     <label for="name">Name</label>
                     <input type="text" id="name" placeholder="Your name">
-                    </div>
                 </div>
                 <div class="form-control flex column">
                     <label for="email">E-mail</label>
