--- a/post.html
+++ b/post.html
@@ -21,7 +21,7 @@
     <header class="page-width">
         <div class="flex align-center justify-between floating-header">
 
-            <a class="flex align-center logo" title="To the Home Page" href="index.html"><svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+            <a class="flex align-center logo" title="To the Home Page" href="index.html"> xmlns="http://www.w3.org/2000/svg"
                     width="248.000000pt" height="71.000000pt" viewBox="0 0 248.000000 71.000000"
                     preserveAspectRatio="xMidYMid meet">
 
@@ -83,6 +83,7 @@
     </header>
     <main>
         <section id="post" class="page-width flex post gap2 margtopbot mob-col-reverse">
+        <h2 class="visually-hidden">Blog</h2>
         </section>
         <section id="main" class="page-width margtopbot">
             <h2 class="visually-hidden">Blog content</h2>
