--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <script type="module" src="js/fetchfeatured.js"></script>
+    <script type="module" src="js/fetchfeatured.js" async></script>
     <script src="js/darkmode.js" defer></script>
-    <script type="module" src="js/carousel.js"></script>
+    <script type="module" src="js/carousel.js" async></script>
 </head>
 
 <body>
@@ -151,7 +151,7 @@
                     <li><a href="https://www.facebook.com/doffiz" target="_blank">Facebook</a></li>
                 </ul>
             </div>
-            <div class="flex1 flex column align-end mob-center">
+            <div class="flex1 flex column align-end mob-center text-end">
                 <h2>This website is WCAG-compliant</h2>
                 <p>and should therefore be accessible by all</p>
                 <p>...Disagree? <a href="contact.html">Contact me</a></p>
