--- a/post.html
+++ b/post.html
@@ -106,7 +106,7 @@
                     <li><a href="https://www.facebook.com/doffiz" target="_blank">Facebook</a></li>
                 </ul>
             </div>
-            <div class="flex1 flex column align-end mob-center">
+            <div class="flex1 flex column align-end mob-center text-end">
                 <h2>This website is WCAG-compliant</h2>
                 <p>and should therefore be accessible by all</p>
                 <p>...Disagree? <a href="contact.html">Contact me</a></p>
