--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Here you will find all my blog articles. Filter and search through them as much as you want">
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script src="js/darkmode.js" defer></script>
