--- a/post.html
+++ b/post.html
@@ -10,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script src="js/darkmode.js" defer></script>
     <script type="module" src="js/post.js" async></script>
@@ -23,7 +22,7 @@
     <header class="page-width">
         <div class="flex align-center justify-between floating-header">
 
-            <a class="flex align-center logo" title="To the Home Page" href="index.html"> xmlns="http://www.w3.org/2000/svg"
+            <a class="flex align-center logo" title="To the Home Page" href="index.html"><svg xmlns="http://www.w3.org/2000/svg"
                     width="248.000000pt" height="71.000000pt" viewBox="0 0 248.000000 71.000000"
                     preserveAspectRatio="xMidYMid meet">
 
