--- a/post.html
+++ b/post.html
@@ -92,6 +92,24 @@
                 <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
             </div></div>
         </section>
+        <section class="page-width flex column gap1 margtopbot">
+            <h2>Comments</h2>
+            <div id="comment-container"></div>
+            <div id="comment-form" class="flex column gap1">
+                <h2>Add a New Comment</h2>
+                <form class="flex column gap1">
+                  <div class="flex column">
+                    <label for="comment-author">Your Name:</label>
+                    <input type="text" id="comment-author" required>
+                  </div>
+                  <div class="flex column">
+                    <label for="comment-content">Your Comment:</label>
+                    <textarea id="comment-content" rows="4" required></textarea>
+                  </div>
+                  <button type="button" id="submit-button" class="button">Submit Comment</button>
+                </form>
+              </div>
+        </section>
     </main>
     <footer>
         <div class="page-width flex align-center justify-between foot mob-col gap2">
