--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     <script type="module" src="js/fetchfeatured.js" async></script>
     <script src="js/darkmode.js" defer></script>
     <script type="module" src="js/carousel.js" async></script>
+    <!-- Hotjar Tracking Code for https://fabulous-swan-d02ede.netlify.app/ -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:3721223,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 </head>
 
 <body>
