--- a/post.html
+++ b/post.html
@@ -144,6 +144,9 @@
         </div>
 
     </footer>
+    <dialog id="imageModal">
+        <img id="modalImage" src="" alt="Image">
+      </dialog>
 </body>
 
 </html>
