--- a/contact.html
+++ b/contact.html
@@ -98,22 +98,22 @@
                 <h1>Get in contact with me</h1>
                 <h2>...and I will get back to you as soon as I can</h2>
             </div>
-            <form action="post" id="contact-form" class="flex column gap1 flex1" novalidate>
+            <form id="contact-form" class="flex column gap1 flex1" novalidate>
                 <div class="form-control flex column">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" placeholder="Your name">
+                    <label for="name">Name *</label>
+                    <input type="text" id="name" placeholder="Your name" required minlength="5" autocomplete="name">
                 </div>
                 <div class="form-control flex column">
-                    <label for="email">E-mail</label>
-                    <input type="email" id="email" placeholder="Your e-mail">
+                    <label for="email">E-mail *</label>
+                    <input type="email" id="email" placeholder="Your e-mail" required autocomplete="email">
                 </div>
                 <div class="form-control flex column">
-                    <label for="subject">Subject</label>
-                    <input type="text" id="subject" placeholder="Subject">
+                    <label for="subject">Subject *</label>
+                    <input type="text" id="subject" placeholder="Subject" required minlength="15">
                 </div>
                 <div class="form-control flex column">
-                    <label for="message">Message</label>
-                    <textarea id="message" placeholder="Your message"></textarea>
+                    <label for="message">Message *</label>
+                    <textarea id="message" placeholder="Your message" required minlength="25"></textarea>
                 </div>
                 <button class="button" type="submit">Send</button>
             </form>
