--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
-                <div class="switch">
+                <div class="switch" aria-label="Toggle Dark Mode / Light Mode">
                     <svg id="darkswitch" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512">
                         <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                         <path
